# xode-blockchain-v1

./: Cargo.toml  README.md  zombienet.toml
node/: Cargo.toml  README.md
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/: README.md
pallets/xode-consensus/: Cargo.toml
pallets/xode-consensus/src/: benchmarking.rs  lib.rs
pallets/xode-staking/: Cargo.toml
pallets/xode-staking/src/: auto_compound.rs  delegation_requests.rs  inflation.rs  lib.rs  migrations.rs  mock.rs  set.rs  tests.rs  traits.rs  types.rs  weights.rs
runtime/: Cargo.toml  README.md
runtime/src/: apis.rs  lib.rs
runtime/src/configs/: mod.rs
zombienet/: README.md  xode-para-config.toml  zombienet-launch.sh
