[package]
name = "pallet-xode-consensus"
description = "Xode Consensus Pallet "
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
log = { workspace = true }
serde = { workspace = true }
# Substrate
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-aura.workspace = true
pallet-timestamp.workspace = true
sp-consensus-aura.workspace = true
sp-runtime.workspace = true

[dev-dependencies]

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"sp-consensus-aura/std",
	"sp-runtime/std",
]
runtime-benchmarks = [ "frame-benchmarking" ]
try-runtime = [ "frame-support/try-runtime" ]
