[package]
name = "pallet-xode-staking"
description = "Xode staking pallet "
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log.workspace = true
serde.workspace = true

# Substrate
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
codec = { features = ["derive",], workspace = true }
scale-info = { features = ["derive",], workspace = true }
sp-consensus-slots.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
substrate-fixed.workspace = true

#nimbus-primitives = { workspace = true }

[dev-dependencies]
pallet-balances.workspace = true
similar-asserts.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-consensus-slots/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
