[package]
name = "pallet-xode-staking"
description = "Xode staking pallet "
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
log = { workspace = true }
serde = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }
sp-consensus-slots = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
substrate-fixed = { workspace = true }

# Nimbus
nimbus-primitives = { workspace = true}

[dev-dependencies]
pallet-balances = { workspace = true, features = [ "insecure_zero_ed", "std" ] }
similar-asserts = { workspace = true }
sp-core = { workspace = true, features = [ "std" ] }
sp-io = { workspace = true, features = [ "std" ] }
sp-runtime = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"nimbus-primitives/std",
	"codec/std",
	"scale-info/std",
	"sp-consensus-slots/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [ "frame-benchmarking" ]
try-runtime = [ "frame-support/try-runtime" ]
